dataset1235/2025-2/805158916/users/2689107057/executions/3435325918_3974737893.log
== RUN (2025-09-03 14:36:01)
-- CODE: 
x=int(input("digite o x: "))
y=int(input("digite o y: "))
if x%y==0:
  print(x//y)
  print("sim")
else:
  print(x%y)
  print("nao)
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 8
    print("nao)
          ^
SyntaxError: unterminated string literal (detected at line 8)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:36:09)
-- CODE: 
x=int(input("digite o x: "))
y=int(input("digite o y: "))
if x%y==0:
  print(x//y)
  print("sim")
else:
  print(x%y)
  print("nao")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:36:44)
-- CODE: 
x=int(input("digite o x: "))
y=int(input("digite o y: "))
if x%y==0:
  print(x//y)
  print("sim")
else:
  print(x%y)
  print("nao")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
